drivers: SQL 解析提前判首关键字，减少冗余扫描
- SQLParser.firstKeyword(String)：不分配、跳过注释与字符串取首关键字
- tableNames 用它先判类型：INSERT/DDL 等不再白词法分析一遍
- SQLParsedStatement.classify 改用它，非 select 不再跑 stripComments